// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test Control should render correctly 1`] = `
<div
  className="row-fluid control"
  id=""
>
  <div
    className="no-left-margin span3 label"
  >
    <label
      className="font2"
      dangerouslySetInnerHTML={
        {
          "__html": "Flux",
        }
      }
    />
  </div>
  <div
    className="font3 span8"
  >
    <div>
      Hello World
    </div>
  </div>
</div>
`;

exports[`test Control should render correctly 2`] = `
<Controls
  label="Flux"
  url="https://www.flux3dp.com"
  warningText="Warning!!"
>
  <div
    className="row-fluid control"
    id=""
  >
    <div
      className="no-left-margin span3 label"
    >
      <label
        className="font2"
        dangerouslySetInnerHTML={
          {
            "__html": "Flux",
          }
        }
      />
      <span
        className="info-icon-small"
      >
        <img
          onClick={[Function]}
          src="img/info.svg"
        />
      </span>
    </div>
    <div
      className="font3 span8"
    >
      <div>
        Hello World
      </div>
      <img
        src="img/warning.svg"
        title="Warning!!"
      />
    </div>
  </div>
</Controls>
`;

exports[`test Control should render correctly in mobile 1`] = `
<div>
  <div
    class="row-fluid control"
    id=""
  >
    <div
      class="no-left-margin"
    >
      <label
        class="font2"
      >
        Flux
      </label>
    </div>
    <div
      class="font3"
    >
      <div>
        Hello World
      </div>
    </div>
  </div>
</div>
`;
